Directory changes made

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <div id="popupMessage" class="popup-message" >
         <span id="popupCloseButton" class="popup-close-button">&times;</span>
         <p id="winningMessage" style="color:white">Aalu wins</p>
-        <img  src="../public/img/emoji.png" alt="" id="emoji">
+        <img  src="./public/img/emoji.png" alt="" id="emoji">
     </div>
 
 
     <div id="audio">
-        <audio id="stepMadeAudio" src="../public/audio/stepMade.wav"></audio>
-        <audio id="winningAudio" src="../public/audio/winningAudio.wav"></audio>
+        <audio id="stepMadeAudio" src="./public/audio/stepMade.wav"></audio>
+        <audio id="winningAudio" src="./public/audio/winningAudio.wav"></audio>
     </div>
 </body>
 </html>
